--- a/Battleship/Battleship.csproj
+++ b/Battleship/Battleship.csproj
@@ -42,4 +42,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <AdditionalFiles Include="./stylecop.json" />
+  </ItemGroup>
+
 </Project>
