--- a/.github/workflows/doxygen-build.yml
+++ b/.github/workflows/doxygen-build.yml
@@ -5,6 +5,5 @@ jobs:
   build:
     uses: mattnotmitt/doxygen-action@v1.9.2
     with:
-      working-directory: 'submodule/'
-      doxyfile-path: 'docs/'
+      working-directory: 'docs/'
       enable-latex: true
