--- a/.github/workflows/doxygen-build.yml
+++ b/.github/workflows/doxygen-build.yml
@@ -23,4 +23,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: Documentation
-        path: /root/docs/build/latex/refman.pdf
+        path: './build/latex/refman.pdf'
