--- a/.github/workflows/doxygen-build.yml
+++ b/.github/workflows/doxygen-build.yml
@@ -4,13 +4,13 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   doxygen-build:
     runs-on: ubuntu-latest
-      
+
     steps:
     - name: Checkout
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-        
+
     - name: Doxygen Action
       id: doxygen_build
       uses: mattnotmitt/doxygen-action@1.9.3
@@ -18,11 +18,11 @@ jobs:
         working-directory: 'docs/'
         doxyfile-path: './Doxyfile'
         enable-latex: true
-        
+
     - run: pwd && ls
-    
+
     - name: Upload Latex Build Artifacts
       uses: actions/upload-artifact@v3
       with:
         name: Documentation
-        path: './latex/refman.pdf'
+        path: './docs/build/latex/refman.pdf'
