Add HTML Output to Documentation Build

--- a/.github/workflows/doxygen-build.yml
+++ b/.github/workflows/doxygen-build.yml
@@ -25,4 +25,6 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: Documentation
-        path: './docs/build/latex/refman.pdf'
+        path: |
+              './docs/build/latex/refman.pdf'
+              './docs/build/html/'
