--- a/.github/workflows/doxygen-build.yml
+++ b/.github/workflows/doxygen-build.yml
@@ -25,6 +25,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: Documentation
-        path: |
-              './docs/build/latex/refman.pdf'
-              './docs/build/html/'
+        path: './docs/build/'
