Separate Doxygen Build Runner into Two Tasks

--- a/.github/workflows/doxygen-build.yml
+++ b/.github/workflows/doxygen-build.yml
@@ -19,10 +19,13 @@ jobs:
         doxyfile-path: './Doxyfile'
         enable-latex: true
 
-    - run: pwd && ls
-
-    - name: Upload Latex Build Artifacts
+    - name: Upload Latex Documentation
       uses: actions/upload-artifact@v3
       with:
-        name: Documentation
+        path: './docs/build/latex/refman.pdf'
+
+    - name: Upload HTML Documentation
+      uses: actions/upload-artifact@v3
+      with:
+        name: HTML Documentation
         path: './docs/build/'
